deployment/kubernetes/overlays/development/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poke-go-backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-staging'
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.api.justpokefriends.com
    secretName: backend-dev-tls
  rules:
    - host: dev.api.justpokefriends.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poke-go-backend
                port:
                  number: 8080
